Add a Publish Queue item to the System Overview menu, migrated to use CA's static copy feature, revised the readme, and bumped to version 1.0.

--- a/plugins/PQManager/tmpl/list.tmpl
+++ b/plugins/PQManager/tmpl/list.tmpl
@@ -1,7 +1,7 @@
 <mt:setvar name="page_title" value="Publish Queue Jobs">
 
 <mt:setvarblock name="html_head" append="1">
-  <link rel="stylesheet" href="<mt:StaticWebPath>plugins/PQManager/app.css" type="text/css" />
+  <link rel="stylesheet" href="<mt:PluginStaticWebPath component="pqmanager">app.css" type="text/css" />
   <script type="text/javascript">
     /* <![CDATA[ */
     var tableSelect;
